--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "babel-preset-stage-3": "^6.24.1"
     },
     "dependencies": {
-        "graphql-yoga": "^1.18.3",
-        "node-fetch": "^3.2.0"
+        "axios": "^0.25.0",
+        "graphql-yoga": "^1.18.3"
     }
 }
